--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     padding: 0;
     margin: 0;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     color: #333333;
 
     * {
@@ -32,7 +32,7 @@ header {
     justify-content: center;
     background-color: #A53DFF;
     border-radius: 100px;
-    color: #f5f5f5;
+    color: #ffffff;
     height: 3rem;
     width: 3rem;
     text-align: center;
@@ -83,41 +83,158 @@ main {
     flex-grow: 1;
 }
 
+section:nth-child(odd) {
+    background-color: #ffffff;
+
+}
+
+section:nth-child(even) {
+    background-color: #f0f1f3;
+}
+
 section {
-    height: 80vh;
     width: 100%;
+    padding: 5rem 0;
 }
 
 footer {
     background-color: red;
 }
 
-.Home {
-    max-width: 1320px;
+.page {
+    max-width: 70rem;
     margin: auto;
-    height: 100%;
-    background-color: white;
-    border-radius: 1rem;
-    box-shadow: 0px 36px 105px 0px rgba(43, 56, 76, 0.10);
+    height: 40rem;
     display: flex;
     align-content: center;
 }
 
-.hero_img {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.hero_img img{
-    width: 400px;
-    height: 400px;
+.page-card {
+    background-color: white;
     border-radius: 1rem;
+    box-shadow: 0px 36px 105px 0px rgba(43, 56, 76, 0.10);
 }
 
-.Home article{
-    width: 50%;
+.hero_img {
+    margin: auto 5rem auto 10rem;
+    position: relative;
+}
 
+.hero_img img {
+    width: 16rem;
+    height: 20rem;
+    border-radius: 1rem;
+    object-fit: cover;
+}
+
+article {
+    width: 50%;
+    margin: auto 5rem auto 3rem;
+}
+
+.btn-container {
+    padding: .5rem;
+    background-color: white;
+    border-radius: 4px;
+    position: absolute;
+    height: auto;
+    bottom: -20px;
+    right: 45px;
+    box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12);
+}
+
+.btn-container a {
+    color: #A53DFF;
+    padding: 1rem 1rem;
+    cursor: pointer;
+}
+
+h1 {
+    align-self: stretch;
+    color: #132238;
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: 4rem;
+    margin-bottom: .25rem;
+    margin-top: .5rem;
+}
+
+h3 {
+    color: #556070;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5rem;
+    margin-bottom: .1rem;
+}
+
+p {
+    color: #556070;
+    font-size: .8rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5rem;
+}
+
+button {
+    padding: 12px 24px;
+    appearance: none;
+    border-radius: 4px;
+    background: #A53DFF;
+    color: white;
+}
+
+.btn-border {
+    background: transparent;
+    color: #A53DFF;
+    border: 1px solid #A53DFF;
+}
+
+.research_card {
+    width: 50%;
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: auto auto;
+}
+
+.card {
+    display: inline-flex;
+    padding: 1.5rem;
+    flex-direction: column;
+    align-items: flex-start;
+    border-radius: 12px;
+    background: #FFF;
+    transition: all .5s ease-in-out;
+}
+
+.card:hover {
+    box-shadow: 32px 32px 124px 0px rgba(43, 56, 76, 0.10);
+    scale: 1.02;
+}
+
+.card div {
+    padding: 1rem;
+    border-radius: 6px;
+    background-color: #f5ebfe;
+    transition: all .5s ease-in-out;
+}
+
+.card:hover div {
+    background-color: #A53DFF;
+}
+
+.card svg {
+    fill: #A53DFF;
+    transition: all .5s ease-in-out;
+}
+
+.card:hover svg {
+    fill: white;
+}
+
+.card_container:nth-child(even) {
+    margin-top: 2rem;
+}
+
+.card_container div{
+    margin-top: 1rem;
 }
