--- a/style.css
+++ b/style.css
@@ -248,6 +248,7 @@ button {
     border-radius: .2rem;
     cursor: pointer;
     transition: all 0.3s ease-in;
+    border: none;
 }
 
 .btn-border {
