--- a/style.css
+++ b/style.css
@@ -316,14 +316,11 @@ button {
     color: #A53DFF;
     border: 1px solid #A53DFF;
     cursor: default;
-    padding: ;
 }
 
 .research_card {
     display: grid;
-    gap: 1rem;
     grid-template-columns: auto auto;
-    margin: 0 3rem;
 }
 
 .card {
@@ -334,6 +331,12 @@ button {
     border-radius: 12px;
     background: #FFF;
     transition: all .5s ease-in-out;
+}
+
+.research_card .card{
+    margin-left: .4rem;
+    width: 49%;
+    height: 19rem;
 }
 
 .card:hover {
@@ -367,11 +370,16 @@ button {
 }
 
 .card_container:nth-child(even) {
-    margin-top: 2rem;
+    margin-top: 0rem;
 }
 
+.card_container{
+    align-items: center;
+    justify-content: center;
+    
+}
 .card_container div {
-    margin-top: 1rem;
+    margin-top: .7rem;
 }
 
 .card h2 {
@@ -515,7 +523,9 @@ footer ul {
         margin-left: 0rem;
         transform: scale(.8);
     }
-
+    .research_card .card{
+        width: 48%;
+    }
     aside li {
         flex-grow: 1;
     }
@@ -539,7 +549,7 @@ footer ul {
     aside li{
         margin: 0px;
     }
-
+    
     .page {
         flex-direction: column;
         padding: 2rem;
@@ -604,6 +614,9 @@ footer ul {
         margin: 4px;
     }
 
+    .research_card .card{
+        width: 100%;
+    }
     .research_card {
         grid-template-columns: auto;
         gap: 0;
