--- a/style.css
+++ b/style.css
@@ -198,11 +198,14 @@ footer ul {
     align-content: center;
 }
 
+.top-btn{
+    text-align: center;
+}
+
 .page-card {
     background-color: white;
     border-radius: 1rem;
     box-shadow: 0px 36px 105px 0px rgba(43, 56, 76, 0.10);
-    height: 40rem;
     padding: 3rem;
 }
 
