--- a/style.css
+++ b/style.css
@@ -642,3 +642,53 @@ footer ul {
     }
 
 }
+/* CSS */
+/* The modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgba(0,0,0,0.4); /* Black with opacity */
+    
+  }
+
+  .modal h3 {
+    text-align: center;
+    font-weight: bolder;
+    font-size: 1.2rem;
+    padding: 3rem;
+  }
+  .modal p {
+    font-size: 1rem;
+    padding: 1rem 2rem;
+  }
+  
+  /* The modal content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 65%; /* Could be more or less, depending on screen size */
+  }
+  
+  /* The close button */
+  .close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
