--- a/style.css
+++ b/style.css
@@ -48,14 +48,18 @@ header {
 }
 
 nav {
-
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem 2rem;
+
     max-width: 1320px;
     margin: auto;
     top: 0;
+}
+
+.main_nav a {
+    font-size: .75rem;
+    text-wrap: nowrap;
 }
 
 .main_nav li:hover {
@@ -84,7 +88,6 @@ nav {
     margin: 0;
     padding: 0;
 }
-
 
 .active,
 .collapsible:hover {
@@ -161,21 +164,62 @@ main {
     flex-grow: 1;
 }
 
-section:nth-child(odd) {
+#Home span {
+    font-size: 30px;
+    font-weight: 900;
+}
+
+
+/* section style */
+section:nth-child(even) {
     background-color: #ffffff;
 
 }
 
-section:nth-child(even) {
+section:nth-child(odd) {
     background-color: #f0f1f3;
 }
 
 section {
     width: 100%;
     padding: 4rem 0;
-    margin: 2rem 0rem;
-    min-height: 100vh;
+    margin: 0rem;
+    min-height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+/* section-header */
+
+.section-header {
+    display: flex;
+    width: 82.5rem;
+}
+
+.section-icon {
+    height: 2.6rem;
+    width: 2.6rem;
+    background-color: #A53DFF;
+    border-radius: 2.5px;
+    padding: .5rem .3rem .3rem .3rem;
+    margin-right: .5rem;
+}
+
+/* section-body */
+.section-wrapper {
+    display: flex;
+    margin: 2rem 0;
+    width: 1320px;
+
+}
+
+.vertical_line {
+    background-color: #A53DFF;
+    width: .5rem;
+    border-radius: 2px;
+}
+
 
 footer {
     z-index: 100;
@@ -192,21 +236,18 @@ footer ul {
 }
 
 .page {
-    max-width: 70rem;
+    max-width: 82.5rem;
     margin: auto;
     display: flex;
     align-content: center;
 }
 
-.top-btn {
-    text-align: center;
-}
 
 .page-card {
     background-color: white;
     border-radius: 1rem;
     box-shadow: 0px 36px 105px 0px rgba(43, 56, 76, 0.10);
-    padding: 3rem;
+    padding: 7rem;
 }
 
 .hero_img {
@@ -218,58 +259,16 @@ footer ul {
 }
 
 .hero_img img {
-    width: 16rem;
-    height: 20rem;
+    width: auto;
+    height: 25rem;
     border-radius: 1rem;
     object-fit: cover;
+    aspect-ratio: 3 / 4;
 }
 
+/* Typography */
 article {
     margin: auto 5rem auto 3rem;
-}
-
-.social_media {
-    width: 55%;
-}
-
-.btn-container {
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    padding: .5rem;
-    background-color: white;
-    border-radius: 4px;
-    height: auto;
-    box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12);
-    height: 3rem;
-    padding: 0;
-    align-items: center;
-    margin-top: -2rem;
-}
-
-.btn-container a {
-    display: flex;
-    align-items: center;
-    padding: 1rem 1rem;
-    cursor: pointer;
-    transition: all .3s ease-in;
-    border-radius: 4px;
-}
-
-.btn-container svg {
-    fill: #A53DFF;
-}
-
-.btn-container a:hover {
-    background-color: #A53DFF;
-}
-
-.btn-container a:hover svg {
-    fill: white;
-}
-
-article button {
-    margin-top: 1rem;
 }
 
 h1 {
@@ -282,6 +281,15 @@ h1 {
     margin-top: .5rem;
 }
 
+h2 {
+    color: #132238;
+    font-size: 3rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 2.5rem;
+    margin: 0;
+}
+
 h3 {
     color: #556070;
     font-size: 1rem;
@@ -290,13 +298,29 @@ h3 {
     margin-bottom: .1rem;
 }
 
+h4 {
+    color: #2B384C;
+    text-align: justify;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 2rem;
+    margin: .4rem;
+}
+
+
 p {
     color: #556070;
     font-size: .8rem;
     font-style: normal;
     font-weight: 400;
     line-height: 1.5rem;
+    margin: .3rem;
+
 }
+
+
+/* button style */
 
 button {
     padding: 12px 24px;
@@ -311,410 +335,82 @@ button {
     margin: 1rem 0;
 }
 
+.social_media {
+    width: auto;
+}
+
+.btn-container a:hover {
+    scale: 1.1;
+    box-shadow: 0px 12px 30px 0px rgba(0, 0, 0, 0.10);
+}
+
+article button {
+    margin-top: 1rem;
+}
+
+.btn-container {
+    display: inline-flex;
+    padding: .5rem;
+    justify-content: center;
+    align-items: center;
+    border-radius: 4px;
+    background: #FFF;
+    position: relative;
+    top: -2rem;
+}
+
+.btn-container a {
+    display: flex;
+    align-items: center;
+    padding: .75rem .75rem;
+    cursor: pointer;
+    transition: all .3s ease-in;
+    border-radius: 4px;
+    background-color: #A53DFF;
+}
+
+.btn-container svg {
+    fill: white;
+}
+
+
 .btn-border {
     background: transparent;
     color: #A53DFF;
     border: 1px solid #A53DFF;
+    transition: all 0.3s ease;
 }
 
-.btn-border-lang {
-    background: transparent;
-    color: #A53DFF;
-    border: 1px solid #A53DFF;
-    cursor: default;
+.btn-border:hover {
+    color: white;
+    background-color: #A53DFF;
+    scale: 1.05;
 }
 
-.research_card {
-    display: grid;
-    grid-template-columns: auto auto;
+/* cards style */
+
+.card-wrapper {
+    margin-left: 2rem;
+    width: 100%;
 }
 
 .card {
-    display: inline-flex;
-    padding: 1.5rem;
-    flex-direction: column;
-    align-items: flex-start;
-    border-radius: 12px;
-    background: #FFF;
-    transition: all .5s ease-in-out;
-
-
-}
-
-
-.research_card .card {
-    margin-left: .4rem;
-    width: 49%;
-    height: 19rem;
-}
-
-.card:hover {
-    box-shadow: 32px 32px 124px 0px rgba(43, 56, 76, 0.10);
-    margin-bottom: .5rem;
-}
-
-.card .svg_holder {
-    padding: 1rem;
+    flex-grow: 1;
     border-radius: 6px;
-    background-color: #f5ebfe;
-    transition: all .5s ease-in-out;
-}
-
-.card:hover .svg_holder {
-    background-color: #A53DFF;
-}
-
-.card svg {
-    fill: #A53DFF;
-    transition: all .5s ease-in-out;
-}
-
-.card:hover svg {
-    fill: white;
-}
-
-.card:hover button {
-    background-color: #A53DFF;
-    color: white;
-}
-
-.card_container:nth-child(even) {
-    margin-top: 0rem;
-}
-
-.card_container {
-    align-items: center;
-    justify-content: center;
-
-}
-
-.card_container div {
-    margin-top: .7rem;
-}
-
-.card h2 {
-    color: #132238;
-    font-size: 1.2rem;
-    font-weight: 600;
-    line-height: 1.5rem;
-    margin: 1.58rem 0 .5rem 0;
-}
-
-.card p {
-    color: #556070;
-    font-size: .8rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-}
-
-.publictaion-section {
-    width: 100%;
-    margin: 0 auto;
-}
-
-.title {
-    margin: 0 auto;
-    text-align: center;
-}
-
-.publictaion {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    gap: 1rem;
-    justify-content: center;
-}
-
-.publictaion .card {
-    padding: 0;
-    border: 1px solid #E6E8EB;
-
-}
-
-.publictaion .card {
-    margin: 0 1rem;
-    padding: 0;
-    border: 1px solid #E6E8EB;
-
-}
-
-.publictaion .card img {
-    width: 100%;
-}
-
-.info {
-    margin: 1rem;
-}
-
-.read-more {
+    background: #FFF;
+    box-shadow: 0px 20px 40px 0px rgba(0, 0, 0, 0.05);
+    padding: 1rem 2rem 1rem 1rem;
     display: flex;
-    justify-content: center;
-    margin: 1rem 0;
-}
-
-.work_cards {
-    display: grid;
-    gap: 1rem;
-}
-
-.work_cards .card {
-    border-radius: 2px;
-    padding: .5rem;
-    margin: 0 3rem;
-}
-
-.work_cards .card:hover {
-    border-left: 2px solid #A53DFF;
-}
-
-.work_cards h2 {
-    margin-top: 0;
-}
-
-.contact-me .card {
-    margin-top: 1rem;
-    display: flex;
-    flex-direction: row;
-    width: 80%;
-    padding: .5rem;
-}
-
-.contact-me .info {
-    margin: 0 1rem;
-}
-
-.contact-me h5 {
-    margin-top: .1rem;
-}
-
-form {
-    margin: auto 1rem auto 2rem;
-}
-
-input {
-    margin: 1rem 0;
-    width: 100%;
-    height: 3rem;
-    appearance: none;
-    border: none;
-    border-bottom: 1px solid #132238;
-}
-
-input:focus-visible {
-    outline: none;
-    appearance: none;
-    border: none;
-    color: #A53DFF;
-    border-bottom: 1px solid #A53DFF;
-}
-
-form button {
-    margin-top: 3rem;
-}
-
-.submit {
-    appearance: none;
-    background: transparent;
-    box-shadow: none;
-    border: none;
-    outline: none;
-    margin: 0;
-    padding: 0;
-    color: #fff;
-    height: 1rem;
-}
-
-footer ul {
-    padding: 0;
+    flex-direction: column;
 }
 
 
 
-@media screen and (max-width: 1380px) {
-    aside ul {
-        width: 100%;
-        margin-left: 0rem;
-        transform: scale(.8);
-    }
 
-    .research_card .card {
-        width: 48%;
-    }
+@media screen and (max-width: 1320px) {}
 
-    aside li {
-        flex-grow: 1;
-    }
-}
+@media screen and (max-width: 968px) {}
 
-@media screen and (max-width: 1081px) {
-    aside {
-        width: 100%;
-        bottom: 0px;
-        margin-left: 0rem;
+@media screen and (max-width: 768px) {}
 
-    }
-
-    aside ul {
-        flex-direction: row;
-        transform: scale(1);
-        width: 100%;
-
-    }
-
-    aside li {
-        margin: 0px;
-    }
-
-    .page {
-        flex-direction: column;
-        padding: 2rem;
-        height: auto;
-    }
-
-    .hero_img {
-        margin: auto;
-    }
-
-    .publictaion {
-        grid-template-columns: auto auto;
-        gap: 1rem;
-        margin: 0;
-
-
-
-    }
-
-    .publictaion .card {
-        margin: 0;
-    }
-
-}
-
-@media screen and (max-width: 850px) {
-    .main_nav {
-        display: none;
-    }
-
-    #collapsible {
-        display: block;
-    }
-
-    section {
-        padding: 0;
-    }
-}
-
-@media screen and (max-width: 560PX) {
-    aside {
-        /* top: 88%; */
-        text-align: center;
-    }
-
-    aside li {
-        padding: 1rem .2rem;
-    }
-
-    aside a {
-        font-size: .9rem;
-        font-weight: 700;
-    }
-
-    footer li {
-        padding: 1rem .5rem;
-    }
-
-    footer a {
-        font-size: .6rem;
-    }
-
-    article {
-        text-align: center;
-        margin: 4px;
-    }
-
-    .research_card .card {
-        width: 100%;
-    }
-
-    .research_card {
-        grid-template-columns: auto;
-        gap: 0;
-        margin: 0;
-    }
-
-    .card_container:nth-child(2n) {
-        margin-top: 0;
-    }
-
-    .publictaion {
-        grid-template-columns: auto;
-
-    }
-
-    .work_cards .card {
-        border-radius: 2px;
-        padding: .5rem;
-        margin: 0;
-    }
-
-}
-
-/* CSS */
-/* The modal (background) */
-.modal {
-    display: none;
-    /* Hidden by default */
-    position: fixed;
-    /* Stay in place */
-    z-index: 1;
-    /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%;
-    /* Full width */
-    height: 100%;
-    /* Full height */
-    overflow: auto;
-    /* Enable scroll if needed */
-    background-color: rgba(0, 0, 0, 0.4);
-    /* Black with opacity */
-
-}
-
-.modal h3 {
-    text-align: center;
-    font-weight: bolder;
-    font-size: 1.2rem;
-    padding: 3rem;
-}
-
-.modal p {
-    font-size: 1rem;
-    padding: 1rem 2rem;
-}
-
-/* The modal content */
-.modal-content {
-    background-color: #fefefe;
-    margin: 15% auto;
-    /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 65%;
-    /* Could be more or less, depending on screen size */
-}
-
-/* The close button */
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-}
+@media screen and (max-width: 560PX) {}
