--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0;
 }
 
 .logo {
@@ -51,9 +52,8 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
-    max-width: 62.75^;
-    margin: auto;
+    max-width: 62.75;
+    margin: 0 .5rem;
     top: 0;
 }
 
