--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header {
     padding: 0rem 2rem;
     background-color: transparent;
     z-index: 10;
+    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.05);
 }
 
 .brand_container {
@@ -75,12 +76,11 @@ nav {
     background-color: #A53DFF;
     color: white;
     cursor: pointer;
-    padding: 18px;
     width: 75px;
     border: none;
     text-align: left;
     outline: none;
-    font-size: 15px;
+
 }
 
 .collapsible-nav {
@@ -470,8 +470,9 @@ svg path {
     transition: all 1s ease;
     max-width: 15rem;
 }
+
 .card-s h4 {
-    text-align: center ;
+    text-align: center;
 }
 
 .card:hover,
@@ -483,7 +484,7 @@ svg path {
     display: inline;
 }
 
-.top-btn a{
+.top-btn a {
     padding: 0 !important;
 }
 
@@ -547,6 +548,16 @@ svg path {
 
     #collapsible {
         display: block;
+        padding-left: 1rem;
+        width: 3rem;
+        height: 3rem;
+        box-sizing: border-box;
+        padding-left: .9rem;
+    }
+
+    #collapsible svg {
+        margin-left: 0rem;
+        scale: 1.5;
     }
 
     section {
@@ -633,9 +644,11 @@ svg path {
     .section-wrapper {
         width: 85%;
     }
+
     .card-s h4 {
         font-size: .8rem;
     }
+
     .card-s {
         padding: .3rem;
     }
@@ -661,6 +674,7 @@ svg path {
 
     footer a {
         padding: .75rem .5rem;
+        font-size: 12px;
     }
 
     footer ul {
